# PDF-Prompt-Guard

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: settings.local.json
samples/: job.txt
src/pdf_prompt_guard/: cli.py  detectors.py  extract.py  report.py  scoring.py
